fixed signup and login wrong padding

--- a/css/forms.css
+++ b/css/forms.css
@@ -5,7 +5,6 @@
     margin: auto;
     justify-content: center;
     align-items: center;
-    padding: 1rem;
     min-height: calc(100vh - 115px);
     gap: 1rem;
 
